JM - Se remueven elementos no usados